Make AddWordFragment into an activity The second tab is now a WordListFragment (it used to be a AddWordFragment), through which AddWordFragment can be accessed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
         </activity>
-        <activity android:name=".AddWordFragment" />
+        <activity android:name=".AddWordActivity" />
         <activity
             android:name=".TabbedActivity"
             android:label="@string/title_activity_tabbed"
