--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExerciseFragment">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            </intent-filter>
+        <activity android:name=".AddWordActivity"
+            android:windowSoftInputMode="stateVisible">
         </activity>
-        <activity android:name=".AddWordActivity" />
         <activity
             android:name=".TabbedActivity"
             android:label="@string/title_activity_tabbed"
