--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,16 @@
     package="com.mstniy.kelimeezber">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.mstniy.kelimeezber.MyApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddWordActivity"
-            android:windowSoftInputMode="stateVisible">
-        </activity>
+        <activity
+            android:name=".AddWordActivity"
+            android:windowSoftInputMode="stateVisible"></activity>
         <activity
             android:name=".TabbedActivity"
             android:label="KelimeEzber"
