--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mstniy.kelimeezber">
-
+    android:versionCode="1"
+    android:versionName="1.0"
+    android:compileSdkVersion="28"
+    android:compileSdkVersionCodename="9"
+    package="com.mstniy.kelimeezber"
+    platformBuildVersionCode="28"
+    platformBuildVersionName="9">
     <application
-        android:name=".MyApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:theme="@style/AppTheme"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".StatsFragment"></activity>
+        android:icon="@mipmap/ic_launcher"
+        android:name="com.mstniy.kelimeezber.MyApplication"
+        android:roundIcon="@mipmap/ic_launcher_round">
         <activity
-            android:name=".AddWordActivity"
+            android:name="com.mstniy.kelimeezber.AddWordActivity"
             android:windowSoftInputMode="stateVisible" />
         <activity
-            android:name=".DrawerActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="KelimeEzber"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name="com.mstniy.kelimeezber.DrawerActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action
+                    android:name="android.intent.action.MAIN" />
+                <category
+                    android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
