--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="1"
-    android:versionName="1.0"
-    android:compileSdkVersion="28"
-    android:compileSdkVersionCodename="9"
-    package="com.mstniy.kelimeezber"
-    platformBuildVersionCode="28"
-    platformBuildVersionName="9">
+    package="com.mstniy.kelimeezber">
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:theme="@style/AppTheme"
         android:label="@string/app_name"
