--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
             android:name="com.mstniy.kelimeezber.AddWordActivity"
             android:windowSoftInputMode="stateVisible" />
         <activity
+            android:name="com.mstniy.kelimeezber.AddLanguageActivity"
+            android:windowSoftInputMode="stateVisible" />
+        <activity
             android:theme="@style/AppTheme.NoActionBar"
             android:label="KelimeEzber"
             android:name="com.mstniy.kelimeezber.DrawerActivity">
